2007-12-17 [paul]	0.17.0

	0.17.0 released

2007-12-17 [paul]	0.16.0cvs7

	* po/hu.po
	* po/it.po
	* po/pt_BR.po
		updated by Pader Rezso, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2007-12-17 [mones]	0.16.0cvs6

	* po/es.po
		Updated Spanish translation for 3.2.0 release

2007-12-06 [colin]	0.16.0cvs5

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_viewer.c
		Fix leak - thanks to Holger

2007-11-21 [colin]	0.16.0cvs4

	* src/gtkhtml2_viewer.c
		Use xdg-open if possible

2007-11-20 [colin]	0.16.0cvs3

	* configure.ac
	* src/gtkhtml2_viewer.c
		Upgrade Claws requirement

2007-11-20 [colin]	0.16.0cvs2

	* src/gtkhtml2_viewer.c
		Fix a leak
		Add -T to html2ps call when images shouldn't be
		loaded.

2007-11-20 [colin]	0.16.0cvs1

	* configure.ac
	* src/Makefile.am
	* src/gtkhtml2_viewer.c
		Add printing support for GTK+ >= 2.10, only for Unix.
		Requires html2ps.

2007-11-19 [paul]	0.16.0

	0.16.0 released

2007-11-19 [paul]	0.15.2cvs9

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso, Andrea Spadaccini, Frederico Goncalves
		Guimaraes, Andrej Kacian, and Ralph Young

2007-10-28 [colin]	0.15.2cvs8

	* src/gtkhtml2_prefs.c
		Fix sensitivity when enabling image loading

2007-10-28 [colin]	0.15.2cvs7

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_prefs.h
	* src/gtkhtml2_viewer.c
		Add addressbook-based whitelisting for loading
		remote images

2007-10-04 [colin]	0.15.2cvs6

	* src/gtkhtml2_prefs.c
		Verify success on writes

2007-10-03 [colin]	0.15.2cvs5

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_viewer.c
		Fix warnings

2007-10-03 [colin]	0.15.2cvs4

	* configure.ac
		Fix missing type checks

2007-09-20 [paul]	0.15.2cvs3

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [colin]	0.15.2cvs2

	* src/gtkhtml2_viewer.c
		Add Zoom in/out to context menu

2007-09-03 [colin]	0.15.2cvs1

	* po/zh_CN.po
		Fix breakage

2007-09-03 [paul]	0.15.2

	0.15.2 released
