@@ -84,3 +84,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/gtkhtml2_prefs.c;  cvs diff -u -r 1.1.2.64 -r 1.1.2.65 src/gtkhtml2_viewer.c;  ) > 0.16.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.7 -r 1.1.2.8 po/es.po;  ) > 0.16.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 po/hu.po;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/it.po;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 po/pt_BR.po;  ) > 0.16.0cvs7.patchset
+( cvs diff -u -r 1.1.2.65 -r 1.1.2.66 src/gtkhtml2_viewer.c;  ) > 0.17.0cvs1.patchset
