@@ -1,3 +1,9 @@
+2008-01-21 [colin]	0.17.0cvs1
+
+	* src/gtkhtml2_viewer.c
+		Fix bug 1478, 'Wrong pthread_create calls all
+                over the place'. Thanks to Christian Cornelssen
+
 2007-12-17 [paul]	0.17.0
 
 	0.17.0 released
